envs/prod/customer-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-api
  namespace: prod
  labels:
    app: customer-api
spec:
  selector: 
    app: customer-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
